config/dev-nodejs/v2_4_4_ingclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    # app.kubernetes.io/name: aws-load-balancer-controller
    app: nodejs-tutorialspoint
  name: alb
spec:
  controller: ingress.k8s.aws/alb
  parameters:
    apiGroup: elbv2.k8s.aws
    kind: IngressClassParams
    name: alb
  ingressClassName: alb
  rules:
  - host: dev.kamin.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nodejs-tutorialspoint
              port:
                number: 80
