config/dev-nodejs/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-tutorialspoint
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nodejs-tutorialspoint
